--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 </head>
 <body>
 
-<div id="app" class="container">
+<div id="app">
 
 	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 	  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 	    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 			<li> <router-link class="nav-link" to="/"> Home </router-link> </li>
-			<li> <router-link class="nav-link" to="winter"> Winter </router-link> </li>
-			<li> <router-link class="nav-link" to="spring"> Spring </router-link> </li>
+			<li> <router-link class="nav-link" to="page1"> Page 1 </router-link> </li>
+			<li> <router-link class="nav-link" to="page2"> Page 2 </router-link> </li>
 	    </ul>
 	  </div>
 	</nav>
 
-	<div class="text-center" style="margin-top: 20px;">
+	<div class="container text-center" style="margin-top: 20px;">
 		<router-view></router-view>
 	</div>
 </div>
 
 <!-- Vue Pages -->
 <script src="pages/home.vue.js"></script>
-<script src="pages/winter.vue.js"></script>
-<script src="pages/spring.vue.js"></script>
+<script src="pages/page1.vue.js"></script>
+<script src="pages/page2.vue.js"></script>
 
 <script>
 var routes = [
   { path: '/', component: Home },
-  { path: '/winter', component: Winter },
-  { path: '/spring', component: Spring }
+  { path: '/page1', component: Page1 },
+  { path: '/page2', component: Page2 }
 ];
 
 var router = new VueRouter({
